feature - install mapbox + style

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,22 @@
   --light-elements: rgb(255 255 255);
   --pink: #c20dc5;
 }
+
+.map-container {
+  height: 100vh;
+  z-index: 0;
+  /* top: 0; */
+}
+
+.sidebar {
+  background-color: rgb(35 55 75 / 90%);
+  color: #fff;
+  padding: 6px 12px;
+  font-family: monospace;
+  z-index: 1;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 12px;
+  border-radius: 4px;
+}
